# Magnificence

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Magnificence Chess.sln  MagnificenceChess.sln  Makefile  README.md  cmake_install.cmake
Magnificence Chess/: ABAI.cpp  ABAI.h  ArrayBoard.cpp  ArrayBoard.h  BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  Datastructures.cpp  Datastructures.h  Engine.cpp  Engine.h  Engines.cpp  Engines.h  Evaluation.cpp  Evaluation.h  GameState.cpp  GameState.h  IO.cpp  IO.h  MCAI.cpp  Magnificence Chess.cpp  Magnificence Chess.vcxproj  Magnificence Chess.vcxproj.filters  Main.cpp  MonteCarloAI.cpp  MonteCarloAI.h  Move.cpp  Move.h  MoveLogic.cpp  ReadMe.txt  Settings.h  Test.cpp  Test.h  TranspositionTable.cpp  TranspositionTable.h
MagnificenceChess/: MagnificenceChess.csproj  Program.cs
MagnificenceChess/Properties/: AssemblyInfo.cs
src/: ABAI.cpp  ABAI.h  ArrayBoard.cpp  ArrayBoard.h  BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  Engine.cpp  Engine.h  GameState.cpp  IO.cpp  IO.h  MCAI.cpp  MCAI.h  Main.cpp  MonteCarloAI.cpp  Move.cpp  Move.h  MoveLogic.cpp  MoveLogic.h  Test.cpp  Test.h  stdafx.cpp
